# packages/relaypay_sdk/_generated/_relaypay_generated/models/response_post_risk_annotation_api_admin_v1_environments_environment_id_risk_reviews_review_id_annotations_post.py
@@ -1,0 +1,65 @@
+from __future__ import annotations
+
+from collections.abc import Mapping
+from typing import Any, TypeVar, BinaryIO, TextIO, TYPE_CHECKING, Generator
+
+from attrs import define as _attrs_define
+from attrs import field as _attrs_field
+
+from ..types import UNSET, Unset
+
+
+
+
+
+
+
+T = TypeVar("T", bound="ResponsePostRiskAnnotationApiAdminV1EnvironmentsEnvironmentIdRiskReviewsReviewIdAnnotationsPost")
+
+
+
+@_attrs_define
+class ResponsePostRiskAnnotationApiAdminV1EnvironmentsEnvironmentIdRiskReviewsReviewIdAnnotationsPost:
+    """ 
+     """
+
+    additional_properties: dict[str, Any] = _attrs_field(init=False, factory=dict)
+
+
+
+
+
+    def to_dict(self) -> dict[str, Any]:
+        
+        field_dict: dict[str, Any] = {}
+        field_dict.update(self.additional_properties)
+
+        return field_dict
+
+
+
+    @classmethod
+    def from_dict(cls: type[T], src_dict: Mapping[str, Any]) -> T:
+        d = dict(src_dict)
+        response_post_risk_annotation_api_admin_v1_environments_environment_id_risk_reviews_review_id_annotations_post = cls(
+        )
+
+
+        response_post_risk_annotation_api_admin_v1_environments_environment_id_risk_reviews_review_id_annotations_post.additional_properties = d
+        return response_post_risk_annotation_api_admin_v1_environments_environment_id_risk_reviews_review_id_annotations_post
+
+    @property
+    def additional_keys(self) -> list[str]:
+        return list(self.additional_properties.keys())
+
+    def __getitem__(self, key: str) -> Any:
+        return self.additional_properties[key]
+
+    def __setitem__(self, key: str, value: Any) -> None:
+        self.additional_properties[key] = value
+
+    def __delitem__(self, key: str) -> None:
+        del self.additional_properties[key]
+
+    def __contains__(self, key: str) -> bool:
+        return key in self.additional_properties
